--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-  <meta name="generator" content="Jekyll" />
-  <meta name="author" content="{{ site.author.name }}" />
-  <meta name="description" content="{{ site.descripton }}" />
-  <link rel="stylesheet" href="{{ site.style }}" type="text/css" />
-  <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
-  <link rel="shortcut icon" href="/blog/favicon.ico" type="image/x-icon" />
-  <script language="javascript" src="js/back_top.js" type="text/javascript"></script> 
-</head>
-<body>
-    {% include head.html %} 
-  <section id="content">
-    <article id="contenter">
-      {{ content }}
-    </article>
-  </section>
-  <div id="back-top">
-      <a href="#top" title="回到顶部"></a>
-  </div>
-    {% include foot.html %}
-</body>
+
+  {% include head.html %}
+
+  <body>
+
+    {% include header.html %}
+
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+  </body>
+
 </html>
